--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<section id="main">
 <div id="login-bg-layer1"></div>
 <div id="login-bg-layer2">
   <span></span>
@@ -234,5 +235,6 @@
     <div class="link-wrapper"><a href="#" id="forget-password">Forgot password</a><a href="#" id="signup">Signup</a></div>
     <button type="submit" id="login-btn">Login</button>
   </div>
+</section>
 </body>
 </html>
