--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
     <form action="" method="post" id="form">
       <h1>sign in</h1>
       <div class="input-wrapper">
-      <input type="text" name="username"  class="form-control" required>
-        <span>Username</span>
+      <input type="text" name="username" id="username" class="form-control" required>
+        <label for="username">Username</label>
       </div>
       <div class="input-wrapper">
-      <input type="password" name="password" class="form-control" required>
-        <span>Password</span>
+      <input type="password" name="password" id="password" class="form-control" required>
+        <label for="password">Password</label>
       </div>
     </form>
     <div class="link-wrapper"><a href="#" id="forget-password">Forgot password</a><a href="#" id="signup">Signup</a></div>
